# AFW_img_process

./: AFW_face_crop.cpp  AFW_face_crop.h  CMakeLists.txt  README.md  face_crop.cpp  face_crop.hpp  main.cpp
